# autoguardrails

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-pinned.txt
baselines/: __init__.py  deter.py  embedding_threshold.py  guardrail_reference.py  tfidf_logreg.py  zero_shot_llm.py
docs/: autointent_presets_map.md  hypothesis_log.md  task_selection.md
shared/: __init__.py  data_utils.py  evaluation.py  load_data_cli.py  metrics.py  visualization.py
tasks/jailbreak_detection/: README.md  hypothesis_log.md
tasks/jailbreak_detection/docs/: autointent_jailbreak.md  autointent_runner_architecture.md  automl_baselines_architecture.md  automl_frameworks_comparison.md  findings_jailbreak.md  framework_benchmarks_architecture.md  wrappers_jailbreak.md
tasks/jailbreak_detection/notebooks/: 01_eda.ipynb  02_sota_eval.ipynb  03_autointent_fewshot.ipynb  04_jailbreak_assymetric_cost_hypothesis.ipynb  05_jailbreak_successful_runs_14_05.ipynb  06_automl_baselines_analysis.ipynb  06_scores_diagnostics.ipynb  07_fulltrain_diagnostics.ipynb  08_embedding_separability.ipynb  09_adversarial_ceiling.ipynb  10_knn_vs_linear_scorer.ipynb  10_query_prompt_ablation.ipynb  11_stacking_scorers.ipynb  12_closing_gap_heads.ipynb  13_orr_tradeoff.ipynb  14_attack_vectors.ipynb  15_roc_comparison.ipynb  kaggle_automl_baselines_jailbreak.ipynb  kaggle_full_pipeline.ipynb  kaggle_heavy_presets_jailbreak.ipynb  rebuild_kaggle_automl_baselines_payload.py  rebuild_kaggle_cell6_payload.py
tasks/jailbreak_detection/results/: metrics.json  metrics.json.README.md  metrics_jailbreak_successful_14_05.json  metrics_jailbreak_successful_14_05_full_rows.json
tasks/jailbreak_detection/scripts/: build_metrics_summary.py  prepare_data.py  run_autointent.py  run_automl_baselines.py  run_framework_benchmarks.py  run_promptguard2.py  run_qwen3guard.py
tasks/jailbreak_detection/src/: __init__.py  data_utils.py  embedding_cache.py  metrics.py  (+1 more)
tasks/oos_detection/: README.md
tests/: conftest.py  test_run_autointent_embedder.py  test_run_autointent_full.py  test_run_autointent_presets.py
tests/support/: autointent_stub.py
(+91 files in other folders)
