[project]
name = "autoguardrails"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "autointent",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "datasets>=2.14",
    "transformers>=4.35",
    "torch>=2.0",
    "sentence-transformers>=2.2",
    "optuna>=3.0",
    "wandb",
    "python-dotenv",
    "lightautoml>=0.3.8",
    "h2o>=3.44",
    "autogluon.tabular>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "baselines*"]
