[project]
name = "autoguardrails"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Версии согласованы с autointent==0.2.0: datasets<4, transformers>=4.49,<5 (иначе pip уходит в минутный backtracking).
    "autointent==0.2.0",
    "torch==2.5.1",
    "transformers==4.49.0",
    "datasets==3.6.0",
    "sentence-transformers==3.4.1",
    "scikit-learn>=1.5,<2",
    "pandas>=2.0",
    "numpy>=1.24,<3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "optuna>=4,<5",
    "wandb>=0.19,<1",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]
automl = [
    "autogluon.tabular>=1.2,<2",
    "h2o>=3.46,<4",
    "lightautoml>=0.3.8,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "baselines*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
